Fixed misaligned cursor and credits

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body{
 }
 .controls{
     position:relative;
+    text-align: center;
 }
 .console{
     border-style:solid;
